[gd_scene load_steps=4 format=3 uid="uid://dqk2bjwlkrxn0"]

[ext_resource type="Texture2D" uid="uid://d0qwnb32bj80e" path="res://Art/Cash.png" id="1_5lo7a"]
[ext_resource type="Script" uid="uid://cmtfhgr7byh74" path="res://Scripts/Pickups/Money.gd" id="1_sayey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sayey"]
size = Vector2(43, 20)

[node name="Money" type="Area2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_sayey")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_5lo7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_sayey")

[node name="Timer" type="Timer" parent="."]
wait_time = 120.0
one_shot = true
autostart = true

[node name="PollTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="PollTimer" to="." method="_on_poll_timer_timeout"]
